# MMLOps

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  pytorch_to_onnx.py  test_client.py  train.py
.dvc/: config
data/processed/: .gitignore  test_split.csv.dvc  train_split.csv.dvc
nvidia-triton/: docker-compose.yaml
nvidia-triton/model_repository/mnist_cnn/: config.pbtxt
nvidia-triton/model_repository/mnist_cnn/1/: model.onnx.dvc
reports/: Optimization.md
src/models/: infer.py  model.py  train.py
src/models/conf/: inference.yaml  train.yaml
src/triton_server/: client.py  config.pbtxt  deploy.sh  model.py  requirements.txt  requirements_client.txt
src/utils/: utils_data.py
tools/triton_server/: Dockerfile  client.py  config.pbtxt  deploy.sh  docker-compose.yaml  model.py  requirements.txt  requirements_client.txt  utils_model.py
