[tool.poetry]
name = "mmlops"
version = "0.1.0"
description = "Project for MLOps course"
authors = ["otvc <olegerko048@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
torchvision = "^0.16.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
fire = "^0.5.0"
scikit-learn = "^1.3.2"
dvc = {extras = ["gdrive"], version = "^3.30.1"}
mlflow = "2.7.0"

[tool.poetry.group.tritonclient]
optional=true

[tool.poetry.group.tritonclient.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.0"
numpy = "^1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "hug"
py_version=311

[tool.flake8]
max-line-length = 79
